--- a/templates/warehouse/index.html.twig
+++ b/templates/warehouse/index.html.twig
@@ -1,20 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello WarehouseController!{% endblock %}
+{% block title %}Warehouse index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Warehouse index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Active</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for warehouse in warehouses %}
+            <tr>
+                <td>{{ warehouse.id }}</td>
+                <td>{{ warehouse.code }}</td>
+                <td>{{ warehouse.name }}</td>
+                <td>{{ warehouse.active ? 'Yes' : 'No' }}</td>
+                <td>
+                    <a href="{{ path('warehouse_show', {'id': warehouse.id}) }}">show</a>
+                    <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/srv/src/Controller/WarehouseController.php'|file_link(0) }}">src/Controller/WarehouseController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/srv/templates/warehouse/index.html.twig'|file_link(0) }}">templates/warehouse/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('warehouse_new') }}">Create new</a>
 {% endblock %}
