--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,17 @@
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-                  rel="stylesheet"
+            <link rel="stylesheet"
+                  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
                   integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+                  crossorigin="anonymous"
+            >
+            <link rel="stylesheet"
+                  href="https://cdn.jsdelivr.net/npm/bootswatch@4.6.0/dist/spacelab/bootstrap.min.css"
+            >
+            <link rel="stylesheet"
+                  href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+                  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
                   crossorigin="anonymous"
             >
         {% endblock %}
@@ -23,7 +31,7 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Tenth navbar example">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false"
