--- a/templates/warehouse/_delete_form.html.twig
+++ b/templates/warehouse/_delete_form.html.twig
@@ -1,5 +1,9 @@
-<form method="post" action="{{ path('warehouse_delete', {'id': warehouse.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post"
+      class="d-inline"
+      action="{{ path('warehouse_delete', {'id': warehouse.id}) }}"
+      onsubmit="return confirm('Точно удалить?');"
+>
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ warehouse.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Удалить</button>
 </form>
