--- a/templates/warehouse/edit.html.twig
+++ b/templates/warehouse/edit.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Warehouse{% endblock %}
+{% block title %}Редактировать склад{% endblock %}
 
 {% block body %}
-    <h1>Edit Warehouse</h1>
+    <h1>Редактировать склад</h1>
+    <hr>
 
-    {{ include('warehouse/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('warehouse/_form.html.twig', {'button_label': 'Обновить'}) }}
 
-    <a href="{{ path('warehouse_index') }}">back to list</a>
+    <div class="row">
+        <div class="offset-md-3 col-md-6 g-3 text-center">
+            <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-primary btn-sm">
+                <i class="fas fa-list"></i> Список складов
+            </a>
 
-    {{ include('warehouse/_delete_form.html.twig') }}
+            {{ include('warehouse/_delete_form.html.twig') }}
+        </div>
+    </div>
+
 {% endblock %}
