--- a/templates/warehouse/index.html.twig
+++ b/templates/warehouse/index.html.twig
@@ -1,18 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Warehouse index{% endblock %}
+{% block title %}Склады - список{% endblock %}
 
 {% block body %}
-    <h1>Warehouse index</h1>
+    <h1>Склады</h1>
+    <hr>
 
-    <table class="table">
+    <table class="table table-hover table-sm">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Code</th>
-                <th>Name</th>
-                <th>Active</th>
-                <th>actions</th>
+                <th style="width:1%">Id</th>
+                <th>Код</th>
+                <th>Название</th>
+                <th>Активен</th>
+                <th>Действия</th>
             </tr>
         </thead>
         <tbody>
@@ -23,17 +24,27 @@
                 <td>{{ warehouse.name }}</td>
                 <td>{{ warehouse.active ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('warehouse_show', {'id': warehouse.id}) }}">show</a>
-                    <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}">edit</a>
+                    <a href="{{ path('warehouse_show', {'id': warehouse.id}) }}"
+                       role="button" class="btn btn-primary btn-sm"
+                    >
+                        <i class="far fa-eye"></i>
+                    </a>
+                    <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}"
+                       role="button" class="btn btn-primary btn-sm"
+                    >
+                        <i class="fas fa-edit"></i>
+                    </a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Не найдено ни одной записи.</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('warehouse_new') }}">Create new</a>
+    <a href="{{ path('warehouse_new') }}" role="button" class="btn btn-primary btn-sm">
+        <i class="fas fa-plus"></i> Создать
+    </a>
 {% endblock %}
