--- a/templates/warehouse/show.html.twig
+++ b/templates/warehouse/show.html.twig
@@ -1,14 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Warehouse{% endblock %}
+{% block title %}Склад  {% endblock %}
 
 {% block body %}
-    <h1>Warehouse</h1>
+    <h1>Склад</h1>
+    <hr>
 
-    <table class="table">
+    <table class="table table-hover table-sm">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th style="width:1%">Id</th>
                 <td>{{ warehouse.id }}</td>
             </tr>
             <tr>
@@ -26,9 +27,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('warehouse_index') }}">back to list</a>
+    <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-primary btn-sm">
+        <i class="fas fa-list"></i> Список складов
+    </a>
 
-    <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}">edit</a>
+    <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}" role="button" class="btn btn-primary btn-sm">
+        <i class="fas fa-edit"></i> Редактировать
+    </a>
 
     {{ include('warehouse/_delete_form.html.twig') }}
 {% endblock %}
