--- a/templates/warehouse/index.html.twig
+++ b/templates/warehouse/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Склады - список{% endblock %}
 
 {% block body %}
-    <h1>Склады</h1>
+    <h1>Склады <small class="text-muted">warehouses</small></h1>
     <hr>
 
     <table class="table table-hover table-sm">
