--- a/templates/warehouse/new.html.twig
+++ b/templates/warehouse/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Создать{% endblock %}
+{% block title %}Создать склад{% endblock %}
 
 {% block body %}
     <h1>Создать склад</h1>
