Added extra space to buttons

--- a/templates/warehouse/_delete_form.html.twig
+++ b/templates/warehouse/_delete_form.html.twig
@@ -5,5 +5,5 @@
 >
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ warehouse.id) }}">
-    <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Удалить</button>
+    <button class="btn btn-danger btn-sm"><i class="fas fa-trash mr-2"></i>Удалить</button>
 </form>
