--- a/templates/warehouse/_form.html.twig
+++ b/templates/warehouse/_form.html.twig
@@ -20,7 +20,7 @@
 <div class="offset-md-3 col-md-6">
     <div class="d-grid gap-2">
         <button class="btn btn- btn-primary btn-sm">
-            <i class="fas fa-save"></i> {{ button_label|default('Сохранить') }}
+            <i class="fas fa-save mr-2"></i>{{ button_label|default('Сохранить') }}
         </button>
     </div>
 </div>
