--- a/templates/warehouse/index.html.twig
+++ b/templates/warehouse/index.html.twig
@@ -45,6 +45,11 @@
     </table>
 
     <a href="{{ path('warehouse_new') }}" role="button" class="btn btn-primary btn-sm">
-        <i class="fas fa-plus"></i> Создать
+        <i class="fas fa-plus mr-2"></i>Создать
     </a>
+
+    <a href="{{ path('warehouse_list_json') }}" role="button" class="btn btn-secondary btn-sm">
+        <i class="fas fa-database mr-2"></i>json
+    </a>
+
 {% endblock %}
