--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,30 +41,21 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false"
-                        aria-label="Toggle navigation"
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#main-navbar"
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+                <div class="collapse navbar-collapse justify-content-md-center" id="main-navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Main</a>
+                            <a class="nav-link active" href="/">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown08" data-bs-toggle="dropdown"
-                               aria-expanded="false">Warehouse</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdown08">
-                                <li><a class="dropdown-item" href="{{ path('warehouse_index') }}">List</a></li>
-                            </ul>
+                            <a class="nav-link" href="{{ path('warehouse_index') }}">Склады</a>
                         </li>
                     </ul>
                 </div>
