--- a/templates/warehouse/edit.html.twig
+++ b/templates/warehouse/edit.html.twig
@@ -10,8 +10,8 @@
 
     <div class="row">
         <div class="offset-md-3 col-md-6 g-3 text-center">
-            <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-primary btn-sm">
-                <i class="fas fa-list"></i> Список складов
+            <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-secondary btn-sm">
+                <i class="fas fa-list mr-2"></i>Список складов
             </a>
 
             {{ include('warehouse/_delete_form.html.twig') }}
