--- a/templates/warehouse/show.html.twig
+++ b/templates/warehouse/show.html.twig
@@ -27,13 +27,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-primary btn-sm">
-        <i class="fas fa-list"></i> Список складов
-    </a>
-
     <a href="{{ path('warehouse_edit', {'id': warehouse.id}) }}" role="button" class="btn btn-primary btn-sm">
-        <i class="fas fa-edit"></i> Редактировать
+        <i class="fas fa-edit mr-2"></i>Редактировать
     </a>
 
     {{ include('warehouse/_delete_form.html.twig') }}
+
+    <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-secondary btn-sm">
+        <i class="fas fa-list mr-2"></i>Список складов
+    </a>
 {% endblock %}
