--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('warehouse_index') }}">Склады</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('package_index') }}">Посылки</a>
+                        </li>
                     </ul>
                 </div>
             </div>
