--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,12 @@
                     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
                     crossorigin="anonymous"
             ></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+                    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+                    crossorigin="anonymous"
+            ></script>
+            <script src="/js/main.js"></script>
+            <script src="/js/jq-ajax-button-confirmarion.js"></script>
         {% endblock %}
     </head>
     <body>
@@ -66,6 +72,15 @@
         </nav>
 
         <main class="container mt-5">
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
             {% block body %}{% endblock %}
         </main><!-- /.container -->
 
