--- a/templates/warehouse/show.html.twig
+++ b/templates/warehouse/show.html.twig
@@ -31,6 +31,12 @@
         <i class="fas fa-edit mr-2"></i>Редактировать
     </a>
 
+    {% if warehouse.active %}
+        <button id="package_deactivate" class="btn btn-danger btn-sm" data-id="{{ warehouse.id }}" role="button">
+            <i class="fas fa-ban mr-2"></i>Деактивировать
+        </button>
+    {% endif %}
+
     {{ include('warehouse/_delete_form.html.twig') }}
 
     <a href="{{ path('warehouse_index') }}" role="button" class="btn btn-secondary btn-sm">
